--- a/Ellevo.mobile.app/Ellevo.mobile.app/paginas/itens/InstrucaoDetalhe.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/paginas/itens/InstrucaoDetalhe.xaml
@@ -14,7 +14,7 @@
           <ScrollView>
             <Grid RowSpacing="0">
               <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
@@ -28,7 +28,7 @@
                 <RowDefinition Height="*" />
               </Grid.RowDefinitions>
               <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
               </Grid.ColumnDefinitions>
 
