--- a/Ellevo.mobile.app/Ellevo.mobile.app/paginas/novas/NovaInstrucao2.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/paginas/novas/NovaInstrucao2.xaml
@@ -3,31 +3,37 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:bp="clr-namespace:Ellevo.mobile.app.controles;assembly=Ellevo.mobile.app"
              x:Class="Ellevo.mobile.app.paginas.novas.NovaInstrucao2"
-             Title="NovaInstrucao2">
-    <ScrollView>
-        <StackLayout Padding="10">
-            <Label x:Name="lbltxtInst" Text="Descrição" HorizontalTextAlignment="Start" VerticalTextAlignment="End" VerticalOptions="End"/>
-            <Editor x:Name="textInstrucao" FontSize="12" BackgroundColor="White" TextColor="Black" HeightRequest="100"/>
-            <Label x:Name="lbltxtDest" Text="Destinatários" HorizontalTextAlignment="Start" VerticalTextAlignment="End" VerticalOptions="End"/>
-            <Editor x:Name="textDestinatarios" FontSize="12" BackgroundColor="White" TextColor="Black" HeightRequest="100" TextChanged="OnTextChanged"/>
-            <bp:BindablePicker x:Name="pickerGrupo" 
+             Title="Nova Instrução">
+    <ContentPage.Padding>
+        <OnPlatform x:TypeArguments="Thickness" iOS="10, 20, 10, 0" Android="10, 10, 10, 10" WinPhone="10, 10, 10, 10" />
+    </ContentPage.Padding>
+    <ContentPage.Content>
+        <ScrollView>
+            <StackLayout Padding="10" VerticalOptions="FillAndExpand">
+                <Label x:Name="lbltxtInst" Text="Descrição" HorizontalTextAlignment="Start" VerticalTextAlignment="End" VerticalOptions="End"/>
+                <Editor x:Name="textInstrucao" FontSize="12" BackgroundColor="White" TextColor="Black" HeightRequest="100"/>
+                <Label x:Name="lbltxtDest" Text="Destinatários" HorizontalTextAlignment="Start" VerticalTextAlignment="End" VerticalOptions="End"/>
+                <Editor x:Name="textDestinatarios" FontSize="12" BackgroundColor="White" TextColor="Black" HeightRequest="100" Focused="textDestinatarios_Focused"/>
+                <bp:BindablePicker x:Name="pickerGrupo" 
                                  DisplayProperty="Nome" 
                                  HorizontalOptions="FillAndExpand" 
                                  SelectedIndexChanged="OnGrupoSelected"
                                  Title="Selecione um grupo..."/>
-            <bp:BindablePicker x:Name="pickerUsuario" 
+                <bp:BindablePicker x:Name="pickerUsuario" 
                                  DisplayProperty="Nome" 
                                  HorizontalOptions="FillAndExpand" 
                                  SelectedIndexChanged="OnUsuarioSelected"
-                                 Title="Selecione um grupo..."/>
-            <Button x:Name="btnConfirmar"
+                                 Title="Selecione um usuário..."/>
+                <Button x:Name="btnConfirmar"
                                   Text="CONFIRMAR"
                                   BackgroundColor="#2DBDB6"
                                   TextColor="White"
                                   BorderWidth="0"
                                   BorderColor="Transparent"
                                   HorizontalOptions="Center"
-                                  Clicked="OnConfirClicked"/>
-        </StackLayout>
-    </ScrollView>
+                                  Clicked="OnConfirClicked"
+                    VerticalOptions="End"/>
+            </StackLayout>
+        </ScrollView>
+    </ContentPage.Content>
 </ContentPage>
