--- a/Ellevo.mobile.app/Ellevo.mobile.app/paginas/itens/InstrucaoDetalhe.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/paginas/itens/InstrucaoDetalhe.xaml
@@ -9,10 +9,10 @@
     </ContentPage.Padding>
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout>
+            <StackLayout Padding="10">
                 <StackLayout.Children>
-                    <ScrollView>
-                        <Grid RowSpacing="0">
+                    <ScrollView Padding="10">
+                        <Grid RowSpacing="0" Padding="10">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="*" />
@@ -41,9 +41,13 @@
                             <Label  Grid.Row="3"  Grid.Column="1" Grid.ColumnSpan="2" x:Name="lblParaValor" HorizontalTextAlignment="Start" HorizontalOptions="Start"/>
                             <Label  Grid.Row="6" Grid.Column="0" x:Name="lblDescricao" Text="Descrição:" HorizontalTextAlignment="Start" FontAttributes="Bold" HorizontalOptions="Fill"/>
                             <Label  Grid.Row="6" Grid.Column="1" Grid.RowSpan="2" x:Name="lblDescValor" HorizontalTextAlignment="Start" HorizontalOptions="Start"/>
-                            
                         </Grid>
                     </ScrollView>
+                    <StackLayout Orientation="Vertical">
+                        <Button x:Name="bt1" Text="Responder" BackgroundColor="#2DBDB6" Clicked="bt1_Clicked"></Button>
+                        <Button x:Name="bt2" Text="Responder a Todos" BackgroundColor="#2DBDB6" Clicked="bt2_Clicked"></Button>
+                        <Button x:Name="bt3" Text="Responder aos Participantes" BackgroundColor="#2DBDB6" Clicked="bt3_Clicked"></Button>
+                    </StackLayout>
                 </StackLayout.Children>
             </StackLayout>
             
